--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-sass": "^4.0.1"
+    "gulp-sass": "^4.0.1",
+    "slick-carousel": "^1.8.1"
   },
   "dependencies": {
     "browser-sync": "^2.24.6",
+    "jquery-migrate": "^3.0.1",
     "swiper": "^4.4.2",
     "tiny-slider": "^2.8.7"
   }
